data/derived/comb/progs/unify/prog2172.ml.out
Characters 73-77:
  List.fold_left f base xs;;
                   ^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
